--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_core: ^2.24.2
   cloud_firestore: ^4.14.0
   firebase_ui_auth: ^1.12.1
+  uuid: ^4.3.3
 
 dev_dependencies:
   flutter_test:
